fix: accessibility -- aria labels on buttons, WCAG contrast for secondary text

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -11,7 +11,7 @@ $site-url: h.$site_url;
 $light-background: #fff;
 $light-background-secondary: #eaeaea;
 $light-color: #222;
-$light-color-secondary: #999;
+$light-color-secondary: #767676;
 $light-border-color: #dcdcdc;
 $light-highlight: #f3f3f3;
 
@@ -19,7 +19,7 @@ $light-highlight: #f3f3f3;
 $dark-background: #292a2d;
 $dark-background-secondary: #3b3d42;
 $dark-color: #a9a9b3;
-$dark-color-secondary: #73747b;
+$dark-color-secondary: #9e9fa5;
 $dark-border-color: #4a4b50;
 $dark-highlight: #333538;
 
